test/lambda/negative/semantic/bare_vector_comparison.ls
// @negative
// @description: symbolic ordered comparisons are scalar-only; use `gt` for masks
([1, 2, 3] > 1)
